@@ -3,7 +3,8 @@
 *******************************************************************************
 
 === 0.5.2 ===
-* Bugfixes for the tk::GraphDot widget.
+- Bugfixes for the tk::GraphDot widget.
+- Added new Display::wait_events() method for polling display for incoming events.
 
 === 0.5.1 ===
 * Updated code to match lltl library headers.
